2013-08-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Get in error state if the tape drive is in
	  fixed block size and it is different than the tapetype size.

2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Print applicationstdout to debug file and
	  stderr.

2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: Be less scrict on perl binary name.

2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/cmdfile.c (cmdfile_write): Cast pid_t to int for printf.

2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c (tape_device_check_writable): Declare get
	  conditionaly.

2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, server-src/holding.c: Cast getpid() to int
	  before printing it.

2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c: s/g_slist_free_full/slist_free_full/

2013-08-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, common-src/conffile.c,
	  perl/Amanda/Header.swg, perl/Amanda/Logfile.swg, server-src/dumper.c,
	  server-src/find.c, server-src/holding.c,
	  server-src/planner.c: Fix memory leak.

2013-08-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Initialize invalid_stotage to NULL.

2013-08-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Add fe_amindexd_STORAGE.
	* common-src/amfeatures.c: Add fe_amindexd_STORAGE.
	* recover-src/amrecover.h (add_storage_value, set_storage): Add
	  prototype.
	* recover-src/help.c: Add storage command.
	* recover-src/set_commands.c (add_storage_value, set_storage): New
	  function.
	* recover-src/uparse.y: Parse storage command.
	* recover-src/uscan.l: Parse storage keyword,
	* server-src/amadmin.c (find): Add new 's' sort order for storage.
	* server-src/amidxtaped.pl: Fix filter issue.